<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_subject">CreateWorkoutActivity</string>
    <string name="registration_no">Number of Reps</string>
    <string name="date">mm/dd/yyyy</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cross_image_content_description">Delete workout from SQLite database</string>
    <string name="empty_address_list_message">Workout List is Empty!</string>
    <string name="address_name">Workout Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit Single workout information</string>
    <string name="title_activity_maps">Search for gyms nearby!</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tab_maps_title">Map</string>
    <string name="list_location">Other gym locations</string>
    <string name="title_activity_display_graph">displayGraph</string>
</resources>
